--- a/index.html
+++ b/index.html
@@ -4,31 +4,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Heppy</title>
+  <title>Happy</title>
   <link rel="icon" href="./public/images/logo-icon.png">
+  <link rel="stylesheet" href="./public/css/main.css">
+  <link rel="stylesheet" href="./public/css/animations.css">
+  <link rel="stylesheet" href="./public/css/page-landing.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,800;1,800&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
 
 </body>
-  <header>
-    <img src="./public/images/logo.svg" alt="Logo Happy">
-    <div>
-      <strong>Mauá</strong>
-      <p>
-        São Paulo
-      </p>
-    </div>
-  </header>
+<div id="page-landing">
+  <div id="container">
+    <header>
+      <img class="animate-up" id="logo" src="./public/images/logo.svg" alt="Logo Happy">
+      <div class="location animate-up">
+        <strong>Mauá</strong>
+        <p>
+          São Paulo
+        </p>
+      </div>
+    </header>
 
-  <main>
-    <h1>Leve felicidade para o mundo</h1>
-    <section>
-      <p>Visite orfanatos e mude o dia de muitas crianças</p>
-      <a href="#" title="Visite orfanatos">
-        <img src="./public/images/arrow.svg" alt="Ir para o mapa">
-      </a>
-    </section>
-  </main>
+    <main>
+      <h1 class="animate-up">Leve felicidade para o mundo</h1>
+      <section class="visit">
+        <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
+        <a href="#" title="Visite orfanatos" class="animate-up">
+          <img src="./public/images/arrow.svg" alt="Ir para o mapa">
+        </a>
+      </section>
+    </main>
+  </div>
+</div>
 
 </html>
