--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 </head>
 
 <body>
-
-</body>
 <div id="page-landing">
   <div id="container">
     <header>
@@ -33,12 +31,12 @@
       <h1 class="animate-up">Leve felicidade para o mundo</h1>
       <section class="visit">
         <p class="animate-up">Visite orfanatos e mude o dia de muitas crianças</p>
-        <a href="#" title="Visite orfanatos" class="animate-up">
+        <a href="orphanages.html" title="Visite orfanatos" class="animate-up">
           <img src="./public/images/arrow.svg" alt="Ir para o mapa">
         </a>
       </section>
     </main>
   </div>
 </div>
-
+</body>
 </html>
