Cria formulario, cria logicas de js do formulario

--- a/orphanage.html
+++ b/orphanage.html
@@ -17,6 +17,11 @@
   <link rel="stylesheet" href="./public/css/main.css">
   <link rel="stylesheet" href="./public/css/animations.css">
   <link rel="stylesheet" href="./public/css/page-orphanage.css">
+  <link rel="stylesheet" href="./public/css/sidebar.css">
+  <link rel="stylesheet" href="./public/css/map.css">
+  <link rel="stylesheet" href="./public/css/buttons.css">
+
+
 
   <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,600;0,800;1,800&display=swap"
     rel="stylesheet">
@@ -33,7 +38,7 @@
         </button></footer>
     </aside>
 
-    <main class="with-sidebar">
+    <main class="animate-appear with-sidebar">
       <div class="orphanage-details">
         <img src="./public/images/home.jpg" alt="Orfanato">
         <div class="images">
